# pm

./: .dockerignore  .env.example  .gitignore  .railwayignore  AGENTS.md  ARCHITECTURE.md  BACKEND-HANDOFF.md  CLAUDE.md  Dockerfile  KAI-AGENT-PRODUCTION-ROADMAP.md  LICENSE  README.md  ROADMAP.md  cli-config.yaml.example  cli.py  docker-compose.storage.yml  docker-compose.yml  drizzle.config.ts  e2b.Dockerfile  e2b.toml  e2b_build.py  e2b_template.py  entrypoint.sh  github_app_auth.py  hermes_constants.py  hermes_state.py  hermes_time.py  kai_constants.py  kai_env.py  kai_state.py  kai_time.py  model_tools.py  nixpacks.toml  package.json  pyproject.toml  railway.toml  requirements-server.txt  requirements.txt  run_agent.py  server.py  (+5 more)
.claude/: settings.local.json
agent/: auxiliary_client.py  display.py  mcp_bridge.py  model_metadata.py  prompt_builder.py  redact.py  state_reporter.py
agent_fleet/: __init__.py  blueprint.py  delegation.py  discovery.py  escalation.py  evolver.py  invocation.py  observer.py  profile.py  refresh.py  registry.py  supervisor.py  watcher.py  workflow.py
backend/: repos.py  session_sync.py  tenant_auth.py  tenant_context.py
cron/: direct_handlers.py  jobs.py  scheduler.py
deploy/: README.md  agent_entrypoint.py  provisioner.py  slack_poll.py  slack_socket.py  test_e2b.py
docs/: github-webhooks.md  multi-tenant-schema.md  supabase-setup.md
frontend/: index.html  package.json  vite.config.ts
gateway/: mirror.py  run.py  session.py  status.py  tenant_resolver.py
hermes_cli/: __init__.py  banner.py  commands.py  config.py  gateway.py  main.py  models.py  setup.py  skin_engine.py  status.py  tools_config.py  uninstall.py
kai_agent.egg-info/: PKG-INFO
kai_cli/: __init__.py  auth.py  banner.py  callbacks.py  checklist.py  config.py  cron.py  curses_ui.py  doctor.py  gateway.py  main.py  models.py  runtime_provider.py  setup.py  skills_config.py  skin_engine.py  status.py  tools_config.py  uninstall.py
knowledge/: skills.md
lifecycle/: __init__.py  client.py  cron.py
migrations/: 0001_foundations.sql  0002_per_tenant_tables.sql  0003_agent_sessions.sql  0004_signals_reports_pulse_changelogs.sql  0005_tenant_workflows.sql  0006_brief_actions_optional_brief.sql  0007_drop_cover_url.sql  0008_fleet_delegations.sql
patches/: README-cublas-benchmark.md  nvidia-kernel-benchmark-cublas.patch
scripts/: backfill_bucket3_to_neon.py  backfill_sessions_to_neon.py  backfill_to_neon.py
skills/: .bundled_manifest  anomaly-detection.md  daily-briefing.md  sprint-recommendation.md  weekly-digest.md
src/: index.ts  paths.ts
storage/: __init__.py  evaluators.py  factory.py  migrate.py  mongo_workspace.py  mongodb.py  protocols.py  s3_backend.py  sync.py
tests/: test_agent_fleet.py  test_agent_fleet_delegation.py  test_agent_fleet_discovery.py  test_agent_fleet_escalation.py  test_agent_fleet_evolution.py  test_agent_fleet_invocation.py  (+10 more)
(+198 files in other folders)
