[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kai-agent"
version = "0.3.1.1"
description = "Autonomous AI research engineer — security scanning, code optimization, and deep research for your organization"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "FirstBatch" }]
license = { text = "MIT" }
dependencies = [
  # Core
  "openai",
  "python-dotenv",
  "fire",
  "httpx",
  "rich",
  "tenacity",
  "pyyaml",
  "requests",
  "jinja2",
  "pydantic>=2.0",
  # Interactive CLI (prompt_toolkit is used directly by cli.py)
  "prompt_toolkit",
  # Tools
  "firecrawl-py",
  "fal-client",
  # Text-to-speech (Edge TTS is free, no API key needed)
  "edge-tts",
  # mini-swe-agent deps (terminal tool)
  "litellm>=1.75.5",
  "typer",
  "platformdirs",
  # Skills Hub (GitHub App JWT auth — optional, only needed for bot identity)
  "PyJWT[crypto]",
  # Remote storage (always available for E2B sandbox)
  "boto3>=1.35.0",
  "pymongo>=4.6.0",
  "e2b>=2.19.0",
]

[project.optional-dependencies]
modal = ["swe-rex[modal]>=1.4.0"]
daytona = ["daytona>=0.148.0"]
dev = ["pytest", "pytest-asyncio", "pytest-xdist", "mcp>=1.2.0"]
messaging = ["python-telegram-bot>=20.0", "discord.py>=2.0", "aiohttp>=3.9.0", "slack-bolt>=1.18.0", "slack-sdk>=3.27.0"]
cron = ["croniter"]
slack = ["slack-bolt>=1.18.0", "slack-sdk>=3.27.0"]
cli = ["simple-term-menu"]
tts-premium = ["elevenlabs"]
pty = [
  "ptyprocess>=0.7.0; sys_platform != 'win32'",
  "pywinpty>=2.0.0; sys_platform == 'win32'",
]
honcho = ["honcho-ai>=2.0.1"]
mcp = ["mcp>=1.2.0"]
remote-storage = ["pymongo>=4.6.0", "boto3>=1.35.0"]
homeassistant = ["aiohttp>=3.9.0"]
yc-bench = ["yc-bench @ git+https://github.com/collinear-ai/yc-bench.git"]
all = [
  "kai-agent[modal]",
  "kai-agent[daytona]",
  "kai-agent[messaging]",
  "kai-agent[cron]",
  "kai-agent[cli]",
  "kai-agent[dev]",
  "kai-agent[tts-premium]",
  "kai-agent[slack]",
  "kai-agent[pty]",
  "kai-agent[honcho]",
  "kai-agent[mcp]",
  "kai-agent[homeassistant]",
]

[project.scripts]
kai = "kai_cli.main:main"
kai-agent = "run_agent:main"
# Backward compat entry points
hermes = "kai_cli.main:main"
hermes-agent = "run_agent:main"

[tool.setuptools]
py-modules = ["run_agent", "model_tools", "toolsets", "batch_runner", "trajectory_compressor", "toolset_distributions", "cli", "kai_constants", "kai_state", "kai_time", "kai_env", "workspace_context", "hermes_constants", "hermes_state", "hermes_time"]

[tool.setuptools.packages.find]
include = ["tools", "kai_cli", "hermes_cli", "gateway", "cron", "honcho_integration", "agent", "lifecycle"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests requiring external services (API keys, Modal, etc.)",
]
addopts = "-m 'not integration' -n auto"
